# owiz-lang

./: .editorconfig  .gitattributes  .gitignore  CMakeLists.txt  README.md
cmake/: FindReadline.cmake  mkcode.cmake  version.cmake  wintools.cmake
doc/: CMakeLists.txt  bytecode.md  coding_style.md  grammar.md
include/: ow.h  owiz.h
src/: CMakeLists.txt  api.c  ow.c  start.c
src/bytecode/: disassemble.c  disassemble.h  dumpcode.c  dumpcode.h  opcode.c  opcode.h  operand.c  operand.h
src/compat/: kw_static.h  kw_thread_local.h  msvc_stdatomic.h
src/compiler/: assembler.c  assembler.h  ast.c  ast.h  ast_node_collections.h  ast_node_def.ini  ast_node_def.py  ast_node_dump.h  ast_node_funcs.h  ast_node_list.h  ast_node_structs.h  codegen.c  codegen.h  compiler.c  compiler.h  error.c  error.h  lexer.c  lexer.h  location.h  parser.c  parser.h  token.c  token.h
src/machine/: globals.c  globals.h  invoke.c  invoke.h  machine.c  machine.h  modmgr.c  modmgr.h  stack.c  stack.h  symbols.c  symbols.h  sysparam.c  sysparam.h  version.h
src/modules/: base.c  module_list.h  module_list.py  modules_conf.cmake  modules_conf.ini  modules_conf.py  modules_util.cmake  modules_util.h  owdb.c  readline.c  repl.c  sys.c
src/objects/: arrayobj.c  arrayobj.h  boolobj.c  boolobj.h  cfuncobj.c  cfuncobj.h  classes.c  classes.h  classes_util.h  classobj.c  classobj.h  exceptionobj.c  exceptionobj.h  floatobj.c  floatobj.h  funcobj.c  funcobj.h  funcspec.h  intobj.c  intobj.h  mapobj.c  mapobj.h  memory.c  memory.h  moduleobj.c  moduleobj.h  natives.c  natives.h  nilobj.c  nilobj.h  object.c  object.h  object_util.h  objmem.c  objmem.h  objmeta.h  objslots.c  objslots.h  setobj.c  setobj.h  (+9 more)
src/toplevels/: api.c  start.c
src/utilities/: array.c  array.h  attributes.h  bits.h  bitset.h  debuglog.c  debuglog.h  dynlib.c  dynlib.h  filesystem.c  filesystem.h  hash.c  hash.h  hashmap.c  hashmap.h  malloc.h  memalloc.c  memalloc.h  platform.h  pragmas.h  process.c  process.h  round.h  stream.c  stream.h  strings.c  strings.h  thread.c  thread.h  unicode.c  unicode.h  unreachable.h  wordsize.h
test/: CMakeLists.txt  api_cplusplus.cc  basic_syntax.c  core_gc.c  lang_api_cxx.cc  lang_syntax.c  public_api.c  test_util.h  util_bits.c  util_bitset.c
tool/: ast2dot.py  statistics.py  version.py
